@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/Attic/xpdf-3.02-r3.ebuild,v 1.2 2009/08/24 14:56:51 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/Attic/xpdf-3.02-r3.ebuild,v 1.3 2009/08/24 15:20:23 loki_val Exp $
 
 EAPI=2
 
@@ -14,14 +14,13 @@ SRC_URI="http://gentooexperimental.org/~genstef/dist/${P}-poppler-20071121.tar.b
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd"
-IUSE="nls nodrm"
+IUSE="nodrm"
 
 RDEPEND="
 	>=virtual/poppler-0.11.3
 	x11-libs/openmotif
 	x11-libs/libX11
 	x11-libs/libXpm
-	nls? ( >=app-text/poppler-data-0.2.1 )
 	"
 
 DEPEND="${RDEPEND}
