@@ -1,6 +1,9 @@
 # ChangeLog for app-text/xpdf
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/Attic/ChangeLog,v 1.181 2009/08/24 11:44:42 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/Attic/ChangeLog,v 1.182 2009/08/24 15:20:23 loki_val Exp $
+
+  24 Aug 2009; Peter Alfredsen <loki_val@gentoo.org> xpdf-3.02-r3.ebuild:
+  Fix needless USE=nls dependency on poppler-data.
 
 *xpdf-3.02-r3 (24 Aug 2009)
 
